#33: fix scrollbar behavior (#21)

--- a/src/presentation/modules/app/components/create-survey/create-survey.component.css
+++ b/src/presentation/modules/app/components/create-survey/create-survey.component.css
@@ -1,12 +1,11 @@
 .container{
     height: 100vh;
-    background-color: #ffffff;
     padding: 20px;
-
 }
 
 .card{
     padding: 20px;
+    /* TODO change this not to be hardcoded!!!!*/
     background-color: #f4f4f4;
     margin: 0 auto;
     max-width: 1300px;
