--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,17 @@ button {
 mat-error{
     font-size: 14px;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+  margin: 2px;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
